--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,16 @@ jobs:
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: false
 
+      - name: Resize icon for Linux
+        if: matrix.platform == 'linux'
+        run: |
+          sudo apt-get install -y imagemagick
+          for size in 16 32 48 64 128 256 512; do
+            mkdir -p assets/icons/${size}x${size}
+            convert assets/icon.png -resize ${size}x${size} assets/icons/${size}x${size}/icon.png
+          done
+          convert assets/icon.png -resize 512x512 assets/icon.png
+
       - name: Build Electron (Linux)
         if: matrix.platform == 'linux'
         run: npx electron-builder --linux AppImage deb --publish never
