--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         if: matrix.platform == 'linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libarchive-tools rpm
+          sudo apt-get install -y libarchive-tools rpm libfuse2 imagemagick
 
       - name: Install dependencies
         run: npm ci
@@ -55,19 +55,18 @@ jobs:
         env:
           CSC_IDENTITY_AUTO_DISCOVERY: false
 
-      - name: Resize icon for Linux
+      - name: Prepare icon for Linux
         if: matrix.platform == 'linux'
         run: |
-          sudo apt-get install -y imagemagick
-          for size in 16 32 48 64 128 256 512; do
+          convert assets/icon.png -resize 256x256 assets/icon.png
+          for size in 16 32 48 64 128 256; do
             mkdir -p assets/icons/${size}x${size}
             convert assets/icon.png -resize ${size}x${size} assets/icons/${size}x${size}/icon.png
           done
-          convert assets/icon.png -resize 512x512 assets/icon.png
 
       - name: Build Electron (Linux)
         if: matrix.platform == 'linux'
-        run: npx electron-builder --linux AppImage deb --publish never
+        run: DEBUG=electron-builder npx electron-builder --linux AppImage deb --publish never
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
