--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Build Electron (Linux)
         if: matrix.platform == 'linux'
-        run: DEBUG=electron-builder npx electron-builder --linux AppImage deb --publish never
+        run: DEBUG=electron-builder npx electron-builder --linux AppImage --publish never
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
